--- a/deepseek_html_20251028_ba072b (1).html
+++ b/deepseek_html_20251028_ba072b (1).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Called to Thrive Entrepreneurship Training Program Report</title>
+    <title>Called to Thrive Entrepreneurship Training Report</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -465,8 +465,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Called to Thrive Entrepreneurship Training Program Report</h1>
-            <p class="subtitle">Silver Level Program Analysis & Recommendations</p>
+            <h1>Called to Thrive Entrepreneurship Training Report</h1>
+            <p class="subtitle">Silver Level trainning Analysis & Recommendations</p>
             <div class="program-dates">
                 <i class="fas fa-calendar-alt"></i> 12 Sessions from May 24 to October 25
             </div>
@@ -479,7 +479,7 @@
             
             <div class="partnership-banner">
                 <div class="partner-logo hlf-logo">
-                    HigherLife Foundation
+                    HigherLife Foundation LLD
                 </div>
                 <div class="vs-icon">
                     <i class="fas fa-handshake"></i>
